# network-builder

./: .gitignore  Dockerfile  LICENSE  README.md  config_generator.py  deploy.py  helpers.py  helpers.py.save  pyproject.toml  requirements.txt  templates.yml
.github/workflows/: build.yml  configure.yml  deploy.yml  runner.yml
batfish/: test_configs.py
config_generator/: config.py  config_generator.py  filters.py  helpers.py  inventory.yml  templates.yml
config_generator/config_snippets/: cisco_ios_acls.j2
config_generator/vars/: main.yml
config_snippets/: cisco_ios_acls.j2
docker/: Dockerfile
network_builder/: config.py  defaults.yaml  filters.py  groups.yaml  helpers.py  hosts.yaml  inventory-schema.yml  inventory.yml  network_builder.py  templates.yaml  templates.yml
network_builder/config_snippets/: arista-ceos-base.j2  arista-ceos-bgp.j2  arista-ceos-intfs.j2  arista-ceos-logging.j2  arista-ceos-mgmt.j2  arista-ceos-ospf.j2  arista-ceos-routing.j2  arista-ceos-security.j2  cisco-ios-banner.j2  cisco-ios-dns.j2  cisco-ios-intfs.j2  cisco_ios_bgp.j2  cisco_ios_dns.j2  cisco_ios_ipv6.j2  cisco_ios_logging.j2  cisco_ios_mgmt.j2  cisco_ios_ntp.j2  cisco_ios_ospf.j2  cisco_ios_rsa-config.j2  cisco_ios_security.j2  cisco_ios_services.j2  cisco_ios_snmp.j2
network_builder/configs/: acme-r1.conf  acme-r2.conf  nabu-r1.conf  nabu-r2.conf
tests/: inventory.yml  jinja_snippet2.j2  templates.yml  test_code.py  test_configs.py  test_filters.py  test_network_builder.py  test_rendering.py  test_templates.py  verify_templates.py
vars/: main.yml
(+7 files in other folders)
