[tool.poetry]
name = "Network Builder"
version = "0.1.0"
description = "Lightweight Network Config Builder & Deployer"
authors = ["Anton <tofft.anton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
netaddr = "0.8.0"
Jinja2 = "2.11.3"
pyaml = "20.4.0"
python-slugify = "^6.1.2"
Cerberus = "^1.3.4"
black = "^22.6.0"
pybatfish = "^2022.3.16"
rich = "^12.5.1"
pytest = "^7.1.2"
isort = "^5.10.1"
nornir = "^3.3.0"
nornir-utils = "^0.2.0"
nornir-napalm = "^0.3.0"
nornir-netmiko = "^0.2.0"